k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nantipov-org-web
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nantipov-org-web
